# gost-trier

./: .gitignore  README.md  pyproject.toml
docs/: usage.md
plans/: tui.md
src/gost_trier/: __init__.py  cli.py  common.py  diagnostics.py  downloads.py  external_deps.toml  gost.py  native.py  placeholders.py  sessions.py  xray.py  xray_run.py  xray_trier.py  xray_tui.py
tests/: test_cli.py
