[project]
name = "gost-trier"
version = "0.1.0"
description = "Try gost forward chains from text-file placeholders and report working proxy configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.27.0",
    "socksio>=1.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
gost-trier = "gost_trier.cli:main"
xray-run = "gost_trier.xray:xray_run_main"
xray-trier = "gost_trier.xray_trier:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"
